--- a/README.org
+++ b/README.org
@@ -22,6 +22,12 @@ contenido.
 
 ** Julio de 2021
 
+*** 18-Jul-21
++ [[https://github.com/leanprover-community/mathlib/blob/master/src/combinatorics/hales_jewett.lean][The Hales-Jewett theorem (in Lean)]]. ~ David Wärn. #ITP #LeanProver #Math
++ [[https://www.genbeta.com/herramientas/emacs-editor-texto-libre-vocacion-sistema-operativo-sus-extensiones-usadas-suplen-toda-clase-aplicaciones][Emacs, el editor de texto libre con vocación de sistema operativo: sus 'extensiones' más usadas suplen toda clase de aplicaciones]]. ~ Marcos Merino (@MarcosMerino_B). #Emacs
++ [[https://forkast.news/video-audio/watch-charles-hoskinson-co-founder-of-ethereum-and-iohk-on-why-cardano-is-a-better-platform-part-i-2-2/][Of all the programming languages in the world, why Haskell? ~ Charles Hoskinson]]. #Haskell #FunctionalProgramming #Cardano
++ [[https://github.com/manateelazycat/emacs-application-framework][Emacs Application Framework (EAF)]]. #Emacs
+
 *** 17-Jul-21
 + [[https://arxiv.org/abs/2107.05225][Incremental vulnerability detection via back-propagating symbolic execution of insecurity separation logic]]. ~ Toby Murray, Pengbo Yan, Gidon Ernst. #ITP #IsabelleHOL
 + [[https://arxiv.org/abs/2107.05493][Integrating an automated prover for projective geometry as a new tactic in the Coq proof assistant]]. ~ Nicolas Magaud. #ITP #Coq #Math
